--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
 <html>
-  <h1>Hello, world! a test website!</h1>
+  <head>
+    <meta charset="utf-8">
+    <title>САЛО УКРАЇНСЬКЕ</title>
+    <style>
+      a {
+        text-decoration: none;
+      }
+    </style>
+  </head>
+  <body>
+    <audio controls autoplay>
+      <source src="audio/salo.ogg" type="audio/ogg">
+      <source src="audio/salo.mp3" type="audio/mpeg">
+     <a href="images/xxx.jpg" download>Скачать файл</a>
+    </audio>
+  </body>
 </html>
