--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <audio controls autoplay>
       <source src="audio/salo.ogg" type="audio/ogg">
       <source src="audio/salo.mp3" type="audio/mpeg">
-     <a href="images/xxx.jpg" download>Скачать файл</a>
+     <a href="audio/salo.mp3" download>Скачать музыку</a>
     </audio>
   </body>
 </html>
